# AdventOfCode2025

./: LICENSE
OCaml/advent_of_code_2025/: .gitignore  advent_of_code_2025.opam  dune-project
OCaml/advent_of_code_2025/lib/: day10Solver.ml  day10Solver.mli  day11Solver.ml  day12Solver.ml  day1Solver.ml  day2Solver.ml  day3Solver.ml  day4Solver.ml  day5Solver.ml  day6Solver.ml  day7Solver.ml  day7Solver.mli  day8Solver.ml  day9Solver.ml  daySolver.ml  daySolver.mli  dune  inputReader.ml  inputReader.mli
OCaml/advent_of_code_2025/test/: dune  test_day_solvers.ml
