(lang dune 3.20)

(name advent_of_code_2025)

(generate_opam_files true)

(source
 (github MDoerner/AdventOfCode2025))

(authors "Max Doerner <maxdoerner@gmx.net>")

(maintainers "Max Doerner <maxdoerner@gmx.net>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name advent_of_code_2025)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml re)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
